Created the Recent Work card placeholders as a DOM object. Will integrate DOM manipulation into the rest of the site soon to make it more modular.

--- a/styles/main.css
+++ b/styles/main.css
@@ -121,3 +121,15 @@ a{
     z-index: 1;
     align-items: center;
 }
+
+
+/* Modular Code Blocks */
+
+.recent-work-card {
+    height: 100px;
+    width: 40%;
+    background-color: var(--bright);
+    border-radius: 5px;
+    margin: 10px auto;
+    text-align: center;
+}
