--- a/styles/main.css
+++ b/styles/main.css
@@ -126,10 +126,50 @@ a{
 /* Modular Code Blocks */
 
 .recent-work-card {
-    height: 100px;
-    width: 40%;
+    display: flex;
+    flex-direction: row;
+    height: 450px;
+    width: 1250px;
     background-color: var(--bright);
-    border-radius: 5px;
+    border-radius: 25px;
+    padding: 20px;
     margin: 10px auto;
-    text-align: center;
+    text-align: left;
+}
+
+.rw-image {
+    width: 450px;
+}
+
+.rw-info-block {
+    display: block;
+    margin: auto 70px;
+}
+
+.rw-title {
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 42px;
+    margin: 15px 0;
+}
+
+.rw-tag {
+    display: inline-block;
+    padding: 7px 15px;
+    background-color: #F8C3AC;
+    border-radius: 25px;
+    font-weight: 500;
+    margin: 15px 20px 15px 0;
+}
+
+.rw-description {
+    margin: 15px 0;
+}
+
+.rw-red {
+    background-color: #F8C3AC;
+}
+
+.rw-blue {
+    background-color: #ACEAF8;
 }
