--- a/styles/main.css
+++ b/styles/main.css
@@ -128,8 +128,9 @@ a{
 .recent-work-card {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     height: 450px;
-    width: 1250px;
+    max-width: 1250px;
     background-color: var(--bright);
     border-radius: 25px;
     padding: 20px;
@@ -138,12 +139,16 @@ a{
 }
 
 .rw-image {
-    width: 450px;
+    min-width: 450px;
+    flex-basis: 450px;
+    flex-grow: 0;
+	flex-shrink: 0;
 }
 
 .rw-info-block {
-    display: block;
-    margin: auto 70px;
+    flex-basis: 800px;
+    
+    padding: auto 70px;
 }
 
 .rw-title {
@@ -164,12 +169,4 @@ a{
 
 .rw-description {
     margin: 15px 0;
-}
-
-.rw-red {
-    background-color: #F8C3AC;
-}
-
-.rw-blue {
-    background-color: #ACEAF8;
 }
