--- a/styles/main.css
+++ b/styles/main.css
@@ -44,10 +44,10 @@ footer {
 h1 {
     font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
-h1 > strong {
+h1 > span {
     font-family: 'Print Char 21', monospace;
 }
 
@@ -160,8 +160,19 @@ a {
     background-color: var(--bright);
     border-radius: 25px;
     padding: 20px;
-    margin: 10px auto;
+    margin: 10px auto 100px;
     text-align: left;
+    box-shadow: 0px 20px 32px 8px rgba(0, 0, 0, 0.15);
+    transition-duration: 300ms;
+}
+
+.recent-work-card:hover {
+    box-shadow: 0px 20px 32px 8px rgba(51, 51, 51, 0.45);
+}
+
+.rw-image {
+    flex-basis: 450px 400px;
+    flex-shrink: 0;
 }
 
 .rw-info-block {
@@ -190,14 +201,6 @@ a {
     margin: 15px 0;
 }
 
-.rw-red {
-    background-color: #F8C3AC;
-}
-
-.rw-blue {
-    background-color: #ACEAF8;
-}
-
 @media only screen and (max-width: 1439px) {
 
     .section-title {
@@ -224,7 +227,6 @@ a {
     }
 
     .rw-image {
-        flex-basis: 450px 400px;
         flex-shrink: 1;
     }
     
@@ -241,9 +243,6 @@ a {
     .rw-description {
         margin: 5px 0;
     }
-}
-
-@media only screen and (max-width: 1079px) {
     #main-banner {
         flex-direction: column;
         margin: 30px;
