--- a/styles/main.css
+++ b/styles/main.css
@@ -66,23 +66,10 @@ a {
     text-decoration: inherit;
 }
 
-/* Intro Section */
 
-.menu  a:hover {
-    text-decoration: underline;
-}
 
-#profile-pic-container {
-    width: min(40%, 600px);
-    text-align: center;
-}
 
-.profile-pic {
-    vertical-align: top;
-    width: clamp(200px, 70%, 350px);
-    height: auto;
-}
-
+/*** Common Classes ***/
 
 .content-block { 
     overflow-x: hidden;
@@ -117,6 +104,10 @@ a {
     background-color: var(--light);
 }
 
+.section-title {
+    margin: 0 auto 30px;
+}
+
 .info-section {
     background-color: var(--dark);
     color: var(--bright);
@@ -124,9 +115,47 @@ a {
     padding-bottom: var(--padding-clamp);
 }
 
-.section-title {
-    margin: 0 auto 30px;
+
+
+
+/*** Intro Section ***/
+
+/* Nav Section */
+
+
+.menu  a:hover {
+    text-decoration: underline;
 }
+
+.top-nav {
+    display: flex;
+}
+
+.burgerX {
+    
+}
+
+.side-nav {
+    display: none;
+    position: fixed;
+    background-color: #FFFFFFEE;
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 400px;
+    margin: 0 auto;
+    padding: 30px 20px;
+    font-size: 2rem;
+    z-index: 1;
+}
+
+.side-nav-item {
+    margin: 50px 0;
+}
+
+
+
+/* Banner Block */
 
 #main-banner {
     gap: 0;
@@ -134,22 +163,24 @@ a {
     align-items: center;
 }
 
+#profile-pic-container {
+    width: min(40%, 600px);
+    text-align: center;
+}
 
-/* Modular Code Blocks */
-
-/* .recent-work-card {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    gap: 50px;
+.profile-pic {
+    vertical-align: top;
+    width: clamp(200px, 70%, 350px);
     height: auto;
-    max-width: 1250px;
-    background-color: var(--bright);
-    border-radius: 25px;
-    padding: 20px;
-    margin: 10px auto;
-    text-align: left;
-} */
+    padding-bottom: 70px;
+}
+
+
+
+
+/*** Body Sections ***/
+
+/* Recent Work Section */
 
 .recent-work-card {
     display: flex;
@@ -160,14 +191,16 @@ a {
     background-color: var(--bright);
     border-radius: 25px;
     padding: 20px;
+    padding-right: 40px;
     margin: 10px auto 100px;
     text-align: left;
-    box-shadow: 0px 20px 32px 8px rgba(0, 0, 0, 0.15);
+    font-size: min(1em, 1.5vw);
+    box-shadow: 0px 20px 24px 8px rgba(0, 0, 0, 0.15);
     transition-duration: 300ms;
 }
 
 .recent-work-card:hover {
-    box-shadow: 0px 20px 32px 8px rgba(51, 51, 51, 0.45);
+    box-shadow: 0px 20px 24px 8px rgba(51, 51, 51, 0.45);
 }
 
 .rw-image {
@@ -194,19 +227,48 @@ a {
     background-color: #aaaaaa;
     border-radius: 25px;
     font-weight: 500;
-    margin: 15px 20px 15px 0;
+    margin: min(3%, 15px) 0;
+    margin-right: min(20px, 5%);
 }
 
 .rw-description {
     margin: 15px 0;
 }
 
-@media only screen and (max-width: 1439px) {
 
+
+
+
+/*** Mobile View ***/
+
+@media only screen and (max-width: 870px) {
+
+    /*** Common ***/
     .section-title {
         max-width: 490px;
     }
 
+
+
+    /*** Intro Section ***/
+
+    /* Navigation Section */
+
+    .top-nav {
+        display: none;
+    }
+
+    .side-nav {
+        display: block;
+        font-size: clamp(1.2rem, 4vw, 2rem);
+        width: min(400px, 45vw);
+    }
+
+
+
+    /*** Body ***/
+
+    /* Recent Work */
 
     .recent-work-card {
         max-width: 490px;
