--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     margin: 0 auto;
 }
 
@@ -78,10 +80,12 @@ button {
     border: none;
     border-radius:25px;
     font: inherit;
+    color: inherit;
 }
 
 form {
     text-align: center;
+    color: inherit;
 }
 
 
