Added another option for the media query, being primarily touch screen. A possible fix to show the mobile layout on larger mobile resolutions.

--- a/styles/main.css
+++ b/styles/main.css
@@ -496,9 +496,14 @@ form {
 
 
 
+
+
+
+
 /*** Mobile View ***/
 
-@media only screen and (max-width: 870px) {
+@media (pointer: coarse),
+only screen and (max-width: 870px) {
 
     /*** Common ***/
     /* .section-title {
