--- a/styles/main.css
+++ b/styles/main.css
@@ -78,19 +78,16 @@ a {
 
 button {
     border: none;
-    border-radius:25px;
+    border-radius: 5%;
     font: inherit;
     color: inherit;
+    background: inherit;
+
 }
 
 form {
-
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    
-    text-align: center;
-    color: inherit;
+    width: auto;
+    height: auto;
 }
 
 input {
@@ -186,11 +183,6 @@ input {
 .side-menu-block {
     display: none;
     position: fixed;
-
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
     height: 100vh;
     width: 400px;
     right: -100%;
@@ -207,12 +199,6 @@ input {
 }
 
 .side-menu-block:hover {
-
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
-    
     box-shadow: var(--shadow-dimensions-hover);
     -webkit-box-shadow: 0px 20px 24px 8px rgba(0, 0, 0, 0.45);
     -moz-box-shadow: var(--shadow-dimensions-hover);
@@ -316,25 +302,19 @@ input {
 
 /* Recent Work Section */
 
-.project-name {
-    margin: 10px auto 100px;
-}
+/* .project-name {
+} */
 
 .recent-work-card {
     display: flex;
     flex-direction: row;
-
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
-    
     gap: 30px;
     height: auto;
     max-width: 1250px;
     background-color: var(--bright);
     border-radius: 25px;
     padding: 20px;
+    margin: 10px auto 100px;
     text-align: left;
     font-size: min(1em, 1.5vw);
     box-shadow: var(--shadow-dimensions);
@@ -344,12 +324,6 @@ input {
 }
 
 .recent-work-card:hover {
-
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-
-    
     box-shadow: var(--shadow-dimensions-hover);
     -webkit-box-shadow: 0px 20px 24px 8px #00000072;
     -moz-box-shadow: var(--shadow-dimensions-hover);
