--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 
 :root {
     --primary: #DEF3FF;
+    --button-color: #1B7353;
+    --button-color-clicked: #184d3a;
     --light: #F1F1F1;
     --dark: #161616;
     --bright: #FFFFFF;
@@ -513,6 +515,23 @@ input {
 }
 
 
+.project-link-button {
+    padding: 2% 8%;
+    margin-top: min(10vw, 100px);
+    margin-bottom: min(10vw, 100px);
+    cursor: pointer;
+    color: var(--bright);
+    background-color: var(--button-color);
+    font-weight: 500;
+    border-radius: 30px;
+    text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.45);
+    transition-duration: 100ms;
+}
+
+.project-link-button:hover {
+    background-color: var(--button-color-clicked);
+    transition-duration: 250ms;
+}
 
 
 
